Skills card website

--- a/index.html
+++ b/index.html
@@ -1,13 +1,81 @@
+<!-- Looking to download this template 
+Source: https://github.com/Code-Plank/ramnadh
+Preview: https://ramnadh.com
+-->
 <!doctype html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="/dist/css/main.css" rel="stylesheet">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Laravel Angular Developer - Ramnadh</title>
+<link href="dist/css/main.css" rel="stylesheet">
+<link rel="apple-touch-icon" sizes="57x57" href="icons/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="icons/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="icons/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="icons/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="icons/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="icons/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="icons/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="icons/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="icons/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="icons/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="icons/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="icons/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
 </head>
 <body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
+<!-- Container -->
+<div class="container my-24 px-6 mx-auto">
+	<!-- Main Section -->
+	<section class="mb-32 text-gray-800 text-center md:text-left">
+	<div class="block rounded-lg shadow-lg bg-white">
+		<div class="flex flex-wrap items-center">
+			<div class="grow-0 shrink-0 basis-auto block lg:flex w-full lg:w-6/12 xl:w-4/12">
+				<img src="img/main.jpg" alt="Trendy Pants and Shoes" class="w-full rounded-t-lg lg:rounded-tr-none lg:rounded-bl-lg"/>
+			</div>
+			<div class="grow-0 shrink-0 basis-auto w-full lg:w-6/12 xl:w-8/12">
+				<div class="px-6 py-12 md:px-12">
+					<h2 class="text-4xl font-bold mb-6 pb-2">RAMNADH</h2>
+					<p class="text-gray-500 text-2xl mb-6 pb-2">
+						 I’m Ramnadh Full Stack Developer based in India. 10+ Years of experience in development and managing projects.
+					</p>
+					<div class="flex flex-wrap mb-6">
+						<div class="w-full lg:w-6/12 xl:w-4/12 mb-4">
+							<p class="flex items-center justify-center md:justify-start">
+								<img class="w-4 mr-1" src="img/bullet.svg"> PHP
+							</p>
+						</div>
+						<div class="w-full lg:w-6/12 xl:w-4/12 mb-4">
+							<p class="flex items-center justify-center md:justify-start">
+								<img class="w-4 mr-1" src="img/bullet.svg"> Laravel
+							</p>
+						</div>
+						<div class="w-full lg:w-6/12 xl:w-4/12 mb-4">
+							<p class="flex items-center justify-center md:justify-start">
+								<img class="w-4 mr-1" src="img/bullet.svg"> JavaScript
+							</p>
+						</div>
+						<div class="w-full lg:w-6/12 xl:w-4/12 mb-4">
+							<p class="flex items-center justify-center md:justify-start">
+								<img class="w-4 mr-1" src="img/bullet.svg"> Angular
+							</p>
+						</div>
+						<div class="w-full lg:w-6/12 xl:w-4/12 mb-4">
+							<p class="flex items-center justify-center md:justify-start">
+								<img class="w-4 mr-1" src="img/bullet.svg"> VueJs
+							</p>
+						</div>
+					</div>
+					<button type="button" class="inline-block px-7 py-3 cbtn-black">
+					Contact Me </button>
+				</div>
+			</div>
+		</div>
+	</div>
+	</section>
+</div>
 </body>
 </html>
