Mail href link update

--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@ Preview: https://ramnadh.com
 							</p>
 						</div>
 					</div>
-					<button type="button" class="inline-block px-7 py-3 cbtn-black">
-					Contact Me </button>
+					<a href="mailto:admin@example.com" class="inline-block px-7 py-3 cbtn-black">
+					Contact Me
+					</a>
 				</div>
 			</div>
 		</div>
